[package]
name = "swarm"
version = "0.1.0"
authors = ["tom <tlw795@uowmail.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "swarmserver"
path = "src/server.rs"

[[bin]]
name = "maw"
path = "src/maw.rs"

[[bin]]
name = "scrape_testing"
path = "src/scraping.rs"

[[bin]]
name = "nicktest"
path = "src/something.rs"


[dependencies]
anyhow = "1.0.31"
sled = {version = "0.31.0", features = ["compression"]}
tokio = { version = "0.2.21", features = ["macros", "signal", "sync"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
config = "0.10.1"
log = "0.4.8"
simple_logger = "1.6.0"
stable-bloom-filter = "0.3.0"
async-std = "1.6.0"
lovecraft = "0.2.0"
tonic = "0.2.1"
prost = "0.6.1"
reqwest = { version = "0.10.6", features = ["json"] }
stork = "0.0.3"
stork_http = "0.0.3"
futures = {version = "0.3.5", features = ["std"]}
lazy_static = "1.4.0"
regex = "1.3.9"
url = "2.1.1"
chrono = { version = "0.4.11", features = ["serde"] }
soup = "0.5"
fnv = "1.0.7"
bincode = "1.2.1"

[profile.release]
lto = true

[build-dependencies]
tonic-build = "0.2.0"